SERVER-57480 invalid iterators in APIVersionMetrics